Fix form width on tablet

--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
 
   @include mq(tablet) {
-    max-width: 370px;
+    width: 370px;
   }
 }
 
